# uz-school-project

./: CLAUDE.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  app-deployer-kubeconfig.yaml  app-deployer-token.txt  create-prod-config.sh  deploy-cloud.sh  deploy-infrastructure.sh  docker-compose.yaml  fix-permissions.sh  frontend-auth-secret.yaml  get-ip-access.sh  k8s-rbac.yaml  monitor-job-resources.sh  plan.md  registry-secret.yaml  scrapers-api-rbac.yaml  setup-frontend-auth.sh  setup-rbac.sh  setup-registry-auth.sh  skaffold-prod.yaml  skaffold.yaml
frontend/: Dockerfile  api.py  app.py  nginx.conf  pyproject.toml
frontend/.helm/: Chart.yaml  values.yaml
frontend/.helm/templates/: auth-secret.yaml  ingress.yaml
frontend/.streamlit/: config.toml
lesson-checker/: Dockerfile  config.py  main.py  pyproject.toml
lesson-checker/.helm/: .helmignore  Chart.yaml  values.yaml
lesson-checker/.helm/templates/: cronjob.yaml  secret.yaml
notification-bot/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
notification-bot/.helm/: Chart.yaml  values.yaml
notification-bot/.helm/templates/: deployment.yaml
profi-scraper/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
profi-scraper/core/: broker.py  config.py  logger.py  redis.py  util.py
profi-scraper/src/orders/: page.py  schema.py  selector.py  services.py
profi-scraper/src/orders/actions/: accept.py  fetch.py  login.py
profi-scraper/src/scraper/: browser.py  scraper.py
scrapers-api/: main.py  pyproject.toml
scrapers-api/.helm/: Chart.yaml  values.yaml
scrapers-api/.helm/templates/: deployment.yaml  secret.yaml  service.yaml
scrapers-api/api/: routes_health.py  routes_jobs.py  routes_scrapers.py
scrapers-api/core/: config.py  redis_client.py
scrapers-api/models/: scraper_config.py
scrapers-api/services/: job_env.py  k8s.py  responses.py
teachers-api/: Dockerfile  main.py  models.py  pyproject.toml
teachers-api/.helm/: Chart.yaml  values.yaml
teachers-api/.helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
teachers-api/alembic/: env.py
teachers-api/alembic/versions/: 7bb8a5f9c98c_init.py
teachers-api/core/: config.py  db.py  notifications.py
teachers-api/routers/: invoices.py  lessons.py  teachers.py
teachers-api/schemas/: __init__.py  invoices.py  lessons.py  teachers.py
teachers-api/services/: invoices.py  lessons.py  teachers.py
teachers-api/tbank/: client.py
teachers-bot-v2/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
teachers-bot-v2/.helm/: Chart.yaml  values.yaml
teachers-bot-v2/.helm/templates/: _helpers.tpl  deployment.yaml
teachers-bot-v2/core/: bot.py  config.py
teachers-bot-v2/handlers/: finance.py  lessons.py  main_menu.py  profile.py  registration.py
teachers-bot-v2/keyboards/: finance.py  lessons.py  navigation.py  registration.py
teachers-bot-v2/models/: states.py  teacher.py
teachers-bot-v2/services/: api_client.py  notification_handler.py
teachers-bot-v2/utils/: formatters.py  validators.py
