[tool.poetry]
name = "lesson-checker"
version = "0.1.0"
description = ""
authors = ["sanfit <sanfit@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["rabbit"], version = "^0.5.48"}
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
