[tool.poetry]
name = "notification-bot"
version = "0.1.0"
description = ""
authors = ["sanfit <sanfit@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0.post0"
pydantic-settings = "^2.10.1"
redis = "^6.2.0"
faststream = {extras = ["rabbit"], version = "^0.5.43"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
