[tool.poetry]
name = "profi-scraper"
version = "0.1.0"
description = ""
authors = ["sanfit <sanfit@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.53.0"
faststream = {extras = ["rabbit"], version = "^0.5.43"}
redis = "^6.2.0"
pydantic-settings = "^2.10.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
